--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -161,7 +161,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="P1h-qb-14g">
                             <connections>
-                                <segue destination="lJ4-O1-Hdc" kind="unwind" unwindAction="unwindSegueWithSegue:" id="iQb-Q0-o4D"/>
+                                <segue destination="lJ4-O1-Hdc" kind="unwind" unwindAction="unwindSegueWithSegue:" id="r2m-mo-La5"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -181,55 +181,48 @@
         <!--My Places-->
         <scene sceneID="v32-Dq-w1z">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dme-Jb-JwU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <viewController id="lut-Gr-IrS" customClass="MainViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Av8-WH-ZSn">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nSy-IH-XBo">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="85" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="nSy-IH-XBo">
                                 <rect key="frame" x="0.0" y="120" width="390" height="724"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="3ky-dC-0A1" customClass="Cell" customModule="MyPlaces" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="390" height="85.666664123535156"/>
+                                        <rect key="frame" x="0.0" y="28" width="390" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3ky-dC-0A1" id="PVC-7m-hHZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="390" height="85.666664123535156"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="5IX-DJ-QAL">
-                                                    <rect key="frame" x="0.0" y="0.0" width="390" height="85.666666666666671"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="390" height="85"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="jnU-hs-fXz">
-                                                            <rect key="frame" x="16" y="8" width="69.666666666666671" height="69.666666666666671"/>
+                                                            <rect key="frame" x="16" y="8" width="69" height="69"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" secondItem="jnU-hs-fXz" secondAttribute="height" multiplier="85:85" id="IWx-cC-TZb"/>
                                                             </constraints>
                                                         </imageView>
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="So4-so-fA5">
-                                                            <rect key="frame" x="101.66666666666666" y="9.3333333333333357" width="272.33333333333337" height="67"/>
+                                                            <rect key="frame" x="101" y="9.3333333333333357" width="273" height="66.333333333333314"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5bW-81-zyp">
-                                                                    <rect key="frame" x="0.0" y="0.0" width="272.33333333333331" height="24"/>
+                                                                    <rect key="frame" x="0.0" y="0.0" width="273" height="23.666666666666668"/>
                                                                     <fontDescription key="fontDescription" name="Thonburi" family="Thonburi" pointSize="18"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dtk-OJ-ExT">
-                                                                    <rect key="frame" x="0.0" y="27" width="272.33333333333331" height="19.666666666666671"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="19.666666666666664" id="dSx-Qi-Fe0"/>
-                                                                    </constraints>
+                                                                    <rect key="frame" x="0.0" y="26.666666666666664" width="273" height="19.333333333333336"/>
                                                                     <fontDescription key="fontDescription" name="Thonburi-Light" family="Thonburi" pointSize="15"/>
                                                                     <color key="textColor" red="0.36681420720000002" green="0.36681420720000002" blue="0.36681420720000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RVj-1p-ylO">
-                                                                    <rect key="frame" x="0.0" y="49.666666666666664" width="272.33333333333331" height="17.333333333333336"/>
-                                                                    <constraints>
-                                                                        <constraint firstAttribute="height" constant="17.333333333333329" id="Cl2-UJ-08D"/>
-                                                                    </constraints>
+                                                                    <rect key="frame" x="0.0" y="49" width="273" height="17.333333333333329"/>
                                                                     <fontDescription key="fontDescription" name="Thonburi-Light" family="Thonburi" pointSize="13"/>
                                                                     <color key="textColor" red="0.37647330759999997" green="0.37646564840000002" blue="0.37647080420000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                                     <nil key="highlightedColor"/>
@@ -251,10 +244,11 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="locationLabel" destination="dtk-OJ-ExT" id="viq-J7-VCK"/>
-                                            <outlet property="restaurantImage" destination="jnU-hs-fXz" id="qnn-BH-GC5"/>
-                                            <outlet property="restaurantLabel" destination="5bW-81-zyp" id="J9K-fE-VQg"/>
-                                            <outlet property="typeLabel" destination="RVj-1p-ylO" id="qZh-ZF-Y2w"/>
+                                            <outlet property="locationLabel" destination="dtk-OJ-ExT" id="wTt-WR-eFt"/>
+                                            <outlet property="restaurantImage" destination="jnU-hs-fXz" id="0gG-A4-2Ht"/>
+                                            <outlet property="restaurantLabel" destination="5bW-81-zyp" id="Y6g-Ms-5TY"/>
+                                            <outlet property="typeLabel" destination="RVj-1p-ylO" id="4v8-1E-0sY"/>
+                                            <segue destination="7G2-gr-TMs" kind="show" identifier="showDetail" id="jSX-SV-DNa"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -269,9 +263,12 @@
                                     <constraint firstAttribute="height" constant="31" id="PDq-PA-tvY"/>
                                 </constraints>
                                 <segments>
-                                    <segment title="First"/>
+                                    <segment title="Date"/>
                                     <segment title="Name"/>
                                 </segments>
+                                <connections>
+                                    <action selector="sortSelection:" destination="lut-Gr-IrS" eventType="valueChanged" id="gJq-OR-Tkm"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XhO-ho-f3G"/>
@@ -304,6 +301,7 @@
                         <outlet property="tableView" destination="nSy-IH-XBo" id="1Y2-9E-YwH"/>
                     </connections>
                 </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dme-Jb-JwU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="184.61538461538461" y="64.691943127962077"/>
         </scene>
@@ -355,6 +353,9 @@
             <point key="canvasLocation" x="960" y="-693"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="jSX-SV-DNa"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="AZ" width="25" height="24"/>
         <image name="Photo" width="194.66667175292969" height="195.66667175292969"/>
